@startuml YaarPool
entity "User" {
  + UserID
  Name
}

entity "Establishment" {
  + EstablishmentID
  Name
}

entity "UserRole" {
  + UserID
  + EstablishmentID
  Role
}

entity "Location" {
  + LocationID
  Name
  Latitude
  Longitude
  -----
  * Establishment
}

entity "Address" {
  + AddressID
  Street
  City
  State
  PostalCode
  -----
  * Location
}

entity "Route" {
  + RouteID
  StartPoint
  EndPoint
  -----
  * Establishment
}

User "0..*" -- "0..*" Establishment : UserRole
Establishment "1" -- "0..1" Location
Location "1" -- "0..*" Address
User "0..*" -- "0..*" Route
@enduml
